--- a/course.html
+++ b/course.html
@@ -412,18 +412,15 @@
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5">
         <div class="container mt-5 pt-5">
+            <div class="col-md-6 mb-5">
+                <p class="m-0">
+                    Mtendere Education Consult is a leading online education company dedicated to providing
+                    high-quality education to its clients. Our mission is to help students achieve their dreams and
+                    achieve their academic goals, while also providing them with the tools and support they need to
+                    succeed.
+                </p>
+            </div>
             <div class="row">
-                <div class="col-md-6 mb-5">
-                    <a href="index.html" class="navbar-brand">
-                        <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
-                    </a>
-                    <p class="m-0">
-                        Mtendere Education Consult is a leading online education company dedicated to providing
-                        high-quality education to its clients. Our mission is to help students achieve their dreams and
-                        achieve their academic goals, while also providing them with the tools and support they need to
-                        succeed.
-                    </p>
-                </div>
                 <div class="col-md-6 mb-5">
                     <h3 class="text-white mb-4">Newsletter</h3>
                     <div class="w-100">
@@ -463,27 +460,27 @@
                     <div class="widget">
                         <h5 class="fw-bold">Gallery</h5>
                         <ul class="instafeed instagram-gallery list-unstyled">
-                            <li><a class="instagram-item" href="#"
+                            <li><a class="instagram-item" href="assets/imgs/IMG-20250324-WA0020.jpg"
                                     data-fancybox="gal"><img src="assets/imgs/IMG-20250324-WA0020.jpg" alt="team"
                                         width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
+                            <li><a class="instagram-item" href="assets/imgs/IMG-20250321-WA0139.jpg"
                                     data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0139.jpg" alt="admission"
                                         width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
+                            <li><a class="instagram-item" href="assets/imgs/Internationalstudies.jpg"
                                     data-fancybox="gal"><img src="assets/imgs/Internationalstudies.jpg"
                                         alt="application" width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
+                            <li><a class="instagram-item" href="assets/imgs/Events-3.jpg"
                                     data-fancybox="gal"><img src="assets/imgs/Events-3.jpg" alt="departure" width="72"
                                         height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
+                            <li><a class="instagram-item" href="assets/imgs/IMG-20250321-WA0138.jpg"
                                     data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0138.jpg"
                                         alt="Scholarships" width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
+                            <li><a class="instagram-item" href="assets/imgs/Event-1.jpg"
                                     data-fancybox="gal"><img src="assets/imgs/Event-1.jpg" alt="Branding" width="72"
                                         height="72"></a>
                             </li>
@@ -545,17 +542,9 @@
     <!-- Back to Top Button -->
     <button id="backToTop" title="Back to top">↑</button>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
-        crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <script src="assets/js/custom.js"></script>
-
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/jquery.animateNumber.min.js"></script>
     <script src="assets/js/jquery.waypoints.min.js"></script>
@@ -563,20 +552,6 @@
     <script src="assets/js/jquery.sticky.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/js/custom.ts"></script>
-
-    <script src="assets/js/core/aosInit.js"></script>
-    <script src="assets/js/core/index.js"></script>
-    <script src="assets/js/core/jarallaxInit.js"></script>
-    <script src="assets/js/core/mobileMenu.js"></script>
-    <script src="assets/js/core/owlCarousels.js"></script>
-    <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
-
-    <!-- SwiperJS Script -->
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-
-    <!-- AOS Script -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 
