--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
             <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                 <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="event.html">Event</a></li>
                 <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 <li class="nav-item">
@@ -90,12 +90,6 @@
 
     <!-- Hero Section -->
     <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel" data-interval="4000">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100" src="assets/imgs/Background/partners.jpg" alt="First slide">
@@ -133,7 +127,6 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-
     <!-- End Hero Section -->
 
     <!-- Video Modal -->
@@ -267,7 +260,6 @@
             </div>
         </div>
     </div>
-
 
     <div class="container mt-5">
         <div class="section-header text-center mb-5">
@@ -1375,75 +1367,142 @@
             </div>
     </section>
 
-    <!-- Footer Section -->
-    <footer class="bg-dark text-light py-5">
-        <div class="container">
+    <!-- Footer Start -->
+    <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5">
+        <div class="container mt-5 pt-5">
+            <div class="col-md-6 mb-5">
+                <p class="m-0">
+                    Mtendere Education Consult is a leading online education company dedicated to providing
+                    high-quality education to its clients. Our mission is to help students achieve their dreams and
+                    achieve their academic goals, while also providing them with the tools and support they need to
+                    succeed.
+                </p>
+            </div>
             <div class="row">
-                <div class="col-md-4 mb-4 mb-md-0">
-                    <h5 class="mb-3">Mtendere Education Consult</h5>
-                    <p>Your trusted partner for international education opportunities. We're committed to helping
-                        students achieve their dreams of studying abroad.</p>
-                    <div class="social-icons mt-3">
-                        <a href="https://x.com/MtendereConsult" class="text-light me-3"><i
-                                class="bi bi-twitter"></i></a>
-                        <a href="https://web.facebook.com/profile.php?id=61552257338090" class="text-light me-3"><i
-                                class="bi bi-facebook"></i></a>
-                        <a href="linkedin.com/in/mtendere-education-consult-1b44a9345" class="text-light me-3"><i
-                                class="bi bi-linkedin"></i></a>
-                        <a href="https://www.instagram.com/mecmw265/" class="text-light"><i
-                                class="bi bi-instagram"></i></a>
+                <div class="col-md-6 mb-5">
+                    <h3 class="text-white mb-4">Newsletter</h3>
+                    <div class="w-100">
+                        <div class="input-group">
+                            <input type="text" class="form-control border-light" style="padding: 30px;"
+                                placeholder="Your Email Address">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary px-4">Sign Up</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2 mb-4 mb-md-0">
-                    <h5 class="mb-3">Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-light">Home</a></li>
-                        <li><a href="service.html" class="text-light">Services</a></li>
-                        <li><a href="course.html" class="text-light">Scholarships</a></li>
-                        <li><a href="gallery.html" class="text-light">Gallery</a></li>
-                        <li><a href="blog.html" class="text-light">Blog</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 mb-4 mb-md-0">
-                    <h5 class="mb-3">Contact Us</h5>
-                    <ul class="list-unstyled">
-                        <li><i class="bi bi-geo-alt-fill me-2"></i>Lilongwe, Malawi</li>
-                        <li><i class="bi bi-telephone-fill me-2"></i>+265 999 360 325</li>
-                        <li><i class="bi bi-envelope-fill me-2"></i>mtendereeduconsult@gmail.com</li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h5 class="mb-3">Newsletter</h5>
-                    <p>Stay updated with our latest news and offers.</p>
-                    <form class="mt-3">
-                        <div class="input-group">
-                            <input type="email" class="form-control" placeholder="Your email" aria-label="Your email"
-                                aria-describedby="button-addon2" required>
-                            <button class="btn btn-primary" type="submit" id="button-addon2">Subscribe</button>
-                        </div>
-                    </form>
-                </div>
             </div>
-        </div>
-    </footer>
-
-    <div class="bg-secondary py-2">
-        <div class="container">
             <div class="row">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0 text-light">&copy; 2023 Mtendere Education Consult. All rights reserved.</p>
+                <div class="col-md-4 mb-5">
+                    <h3 class="text-white mb-4">Get In Touch</h3>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>
+                        Babaje House, Off Mandala Road,<br>
+                        Area 3, Behind NBs<br>
+                        1st Floor Room 1,<br>
+                        Lilongwe<br>
+                    </p>
+                    <p><i class="fa fa-phone-alt mr-2"></i> +265999360325 | 0887209531</p>
+                    <p><i class="fa fa-envelope mr-2"></i> mtendereeduconsult@gmail.com</p>
+                    <div class="d-flex justify-content-start mt-4">
+                        <a class="text-white mr-4" href="https://x.com/MtendereConsult"><i
+                                class="fab fa-2x fa-twitter"></i></a>
+                        <a class="text-white mr-4" href="https://web.facebook.com/profile.php?id=61552257338090"><i
+                                class="fab fa-2x fa-facebook-f"></i></a>
+                        <a class="text-white mr-4" href="linkedin.com/in/mtendere-education-consult-1b44a9345"><i
+                                class="fab fa-2x fa-linkedin-in"></i></a>
+                        <a class="text-white" href="https://www.instagram.com/mecmw265/"><i
+                                class="fab fa-2x fa-instagram"></i></a>
+                    </div>
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <a href="#" class="text-light me-2">Privacy Policy</a>
-                    <a href="#" class="text-light">Terms of Service</a>
+                <div class="col-lg-3 mb-4">
+                    <div class="widget">
+                        <h5 class="fw-bold">Gallery</h5>
+                        <ul class="instafeed instagram-gallery list-unstyled">
+                            <li><a class="instagram-item" href="assets/imgs/IMG-20250324-WA0020.jpg"
+                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250324-WA0020.jpg" alt="team"
+                                        width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="assets/imgs/IMG-20250321-WA0139.jpg"
+                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0139.jpg" alt="admission"
+                                        width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="assets/imgs/Internationalstudies.jpg"
+                                    data-fancybox="gal"><img src="assets/imgs/Internationalstudies.jpg"
+                                        alt="application" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="assets/imgs/Events-3.jpg"
+                                    data-fancybox="gal"><img src="assets/imgs/Events-3.jpg" alt="departure" width="72"
+                                        height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="assets/imgs/IMG-20250321-WA0138.jpg"
+                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0138.jpg"
+                                        alt="Scholarships" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="assets/imgs/Event-1.jpg"
+                                    data-fancybox="gal"><img src="assets/imgs/Event-1.jpg" alt="Branding" width="72"
+                                        height="72"></a>
+                            </li>
+                        </ul>
+                    </div> <!-- /.widget -->
+                </div> <!-- /.col-lg-3 -->
+
+                <div class="col-md-3 mb-4">
+                    <h5 class="fw-bold">Services</h5>
+                    <ul class="list-unstyled" style="list-style: none;">
+                        <li><a href="course.html" class="text-white">Programmes</a></li>
+                        <li><a href="#" class="text-white">Application Process</a></li>
+                        <li><a href="course.html" class="text-white">Scholarships</a></li>
+                        <li><a href="visa.html" class="text-white">Visa Information</a></li>
+                        <li><a href="testimonials.html" class="text-white">Testimonials</a></li>
+                        <li><a href="blog.html" class="text-white">Blog</a></li>
+                        <li><a href="contact.html" class="text-white">Contact Us</a></li>
+                    </ul>
+                </div>
+
+                <!-- Footer Column 3: News and Blog -->
+                <div class="col-md-3 mb-4">
+                    <h5 class="fw-bold">News & Updates</h5>
+                    <ul class="list-unstyled" style="list-style: none;">
+                        <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
+                        <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
+                        </li>
+                        <li><a href="blog.html" class="text-white">Blog: Tips on Applying to Top Universities</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <h5 class="text-white mb-4">Quick Links</h5>
+                    <div class="d-flex flex-column justify-content-start" style="list-style: none;">
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
+                            Condition</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
+                        <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="copyrights">
+        <div class="container">
+            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</p>
+        </div>
+    </div>
+    <!-- Footer End -->
+
+    <!-- Floating WhatsApp Chat Button -->
+    <a href="https://wa.me/999360325" class="whatsapp-float" target="_blank"
+        style="@keyframes bounce {0%, 100% {transform: translateY(0);}50% {transform: translateY(-10px);}}">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
+    </a>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" title="Back to top">↑</button>
 
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/jquery.animateNumber.min.js"></script>
     <script src="assets/js/jquery.waypoints.min.js"></script>
