--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
         </div>
     </div>
 
-    <div id="formModal">
+    <div id="formModal" class="formModal">
         <div class="modal-content">
             <span id="closeFormBtn">&times;</span>
             <h1>Apply to Partner Universities</h1>
