--- a/gallery.html
+++ b/gallery.html
@@ -3,39 +3,27 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mtendere Education Consult - Study Abroad Malawi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mtendere Education Consult - Your trusted partner for studying abroad.">
-    <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education">
-    <meta name="author" content="Mtendere Education Consult">
+    <meta name="author" content="Untree.co">
+    <link rel="shortcut icon" href="favicon.png">
 
-    <!-- Bootstrap 5 & Custom Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="description" content="" />
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Display+Playfair:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/dist/aos.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="assets/lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/lib/animate/animate.css">
+    <link rel="stylesheet" href="assets/lib/bootstrap/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/css/globals.css">
+    <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
+    <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
-    <!-- Owl Carousel CSS -->
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
-
-    <!-- Owl Carousel JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-
+    <title>Mtendere Education Consult-Homepage</title>
 </head>
 
 <body>
@@ -72,7 +60,8 @@
     <!-- Navigation Bar -->
     <nav class="navbar sticky-top navbar-expand-lg">
         <a class="navbar-brand" href="#">
-            <img src="assets/imgs/Mtendere_Logo.png" class="d-inline-block align-top" alt="Mtendere Logo">
+            <img src="assets/imgs/Mtendere_Logo.png" class="d-inline-block align-top"
+                alt="Mtendere Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
             aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,10 +71,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
             <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                 <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="event.html">Event</a></li>
                 <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 <li class="nav-item">
@@ -96,7 +85,6 @@
             </ul>
         </div>
     </nav>
-
     <!-- End Navigation Bar -->
 
     <!-- Header Start -->
@@ -160,24 +148,34 @@
 
     <div class="gallery-section">
         <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Pictorial View</h6>
+                <h1 class="display-5">
+                    <span class="text-primary">
+                    </span>
+                </h1>
+                <p class="lead">
+                    Mtendere is committed to providing the best possible education and opportunities for its students.
+                </p>
+            </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4 item">
-                    <a href="images/img-school-5-min.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
+                    <a href="assets/imgs/IMG-20250321-WA0226.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
                         data-aos="fade-up" data-aos-delay="0">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/IMG-20250321-WA0226.jpg">
                     </a>
-                    <a href="images/img_1.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/graduates.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="0">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/graduates.jpg">
                     </a>
-                    <a href="images/img_2.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/IMG-20250321-WA0411.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="100">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/IMG-20250321-WA0411.jpg">
                     </a>
-                    <a href="images/img_3.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/IMG-20250324-WA0027.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="200">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/IMG-20250324-WA0027.jpg">
@@ -185,7 +183,7 @@
 
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <a href="images/img-school-1-min.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
+                    <a href="assets/imgs/Atsikana Paulendo Career Talks.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
                         data-aos="fade-up" data-aos-delay="0">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/Atsikana Paulendo Career Talks.jpg">
@@ -195,39 +193,39 @@
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/Background/doctors pose.jpg">
                     </a>
-                    <a href="images/img_5.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/IMG-20250321-WA0434.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="100">
                         <span class="icon-search2"></span>
-                        <img class="img-fluid" src="assets/imgs">
+                        <img class="img-fluid" src="assets/imgs/IMG-20250321-WA0434.jpg">
                     </a>
-                    <a href="images/img_8.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/Blogs/Counscelling and Mentorship workshop 2022 Batch.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="200">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/Blogs/Counscelling and Mentorship workshop 2022 Batch.jpg">
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <a href="images/img-school-2-min.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
+                    <a href="assets/imgs/Events/IMG-20221019-WA0074.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal"
                         data-aos="fade-up" data-aos-delay="0">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/Events/IMG-20221019-WA0074.jpg">
                     </a>
-                    <a href="images/img_9.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/courses/IMG-20230620-WA0436.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="0">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/courses/IMG-20230620-WA0436.jpg">
                     </a>
-                    <a href="images/img_6.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/IMG-20250321-WA0195.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="100">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/IMG-20250321-WA0195.jpg">
                     </a>
-                    <a href="images/img_7.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/Abroad students Malawi flag.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="200">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/Abroad students Malawi flag.jpg">
                     </a>
-                    <a href="images/img_10.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
+                    <a href="assets/imgs/Students on Campus with Branded Jerseys.jpg" class="item-wrap fancybox mb-4" data-fancybox="gal" data-aos="fade-up"
                         data-aos-delay="0">
                         <span class="icon-search2"></span>
                         <img class="img-fluid" src="assets/imgs/Students on Campus with Branded Jerseys.jpg">
