--- a/index.html
+++ b/index.html
@@ -812,7 +812,6 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-
                     <p>Trust Chikondi Mangani pursued his BSc in Cybersecurity at Chandigarh University...</p>
                     <p>Through determination and the right support, he has turned his dreams into a global career
                         opportunity...</p>
@@ -826,8 +825,6 @@
                     <p>He has worked with students from various backgrounds, including those who have faced adversity,
                         and has shown them that education is not just about achieving academic success, but also about
                         transforming lives.</p>
-
-
                 </div>
             </div>
         </div>
@@ -993,7 +990,6 @@
                     choose to
                     pay by bank transfer.</p>
             </div>
-
         </div>
     </div>
 
@@ -1001,7 +997,6 @@
         <div class="modal-content">
             <span id="closeFormBtn">&times;</span>
             <h1>Apply to Partner Universities</h1>
-
             <form id="applicationForm">
                 <label for="university">Select University</label>
                 <select id="universitySelect" name="university" required>
@@ -1127,7 +1122,7 @@
                     5. Recommendation Letters<br>
                     6. English Proficiency Test Scores (if applicable)<br>
                     7. Financial Documents (if applicable)<br>
-                ----->
+                
                 <div class="file-input">
                     <label for="statementOfPurpose">Upload Statement of Purpose (PDF, DOCX only)</label>
                     <input type="file" id="statementOfPurpose" name="statementOfPurpose" accept=".pdf, .docx" required>
@@ -1142,7 +1137,7 @@
                         only)</label>
                     <input type="file" id="englishProficiencyTestScores" name="englishProficiencyTestScores"
                         accept=".pdf, .docx">
-                </div>
+                </div>----->
 
                 <label for="motivation">Why are you choosing this program?</label>
                 <textarea name="motivation" rows="3" required></textarea>
