--- a/index.html
+++ b/index.html
@@ -1227,9 +1227,7 @@
                                 </div>
                             </blockquote>
                         </div>
-
                         <!-- Add more testimonials as needed -->
-
                     </div>
                     <!-- End Owl Carousel -->
                 </div>
@@ -1267,18 +1265,22 @@
                     <p>Get tips and tricks for making your university application stand out.</p>
                 </div>
             </div>
-
             <!-- Add more if needed -->
-
         </div>
     </div>
 
 
     <!-- Call to Action -->
-    <div class="call-to-action text-center">
-        <h3>Ready to join Mtendere?</h3>
-        <p>Start your application today and shape your global future.</p>
-        <a href="#apply" class="btn cta-btn">Apply Now</a>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <div class="call-to-action text-center py-5">
+                    <h2 class="text-primary fw-bold">Ready to embark on your international education journey?</h2>
+                    <p class="text-muted">Contact us today to schedule a free consultation or explore our program options.</p>
+                    <a href="contact.html" class="btn btn-primary px-5">Contact Us</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
@@ -1329,8 +1331,8 @@
                 <div class="col-4 col-sm-2">
                     <img src="assets/imgs/au-logo.png" alt="Accreditation 7" class="img-fluid grayscale-hover">
                 </div>
-
             </div>
+        </div>
     </section>
 
     <!-- Footer Start -->
