--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 
         <meta name="description" content="" />
 
-        <link
-            href="https://fonts.googleapis.com/css2?family=Display+Playfair:wght@400;700&family=Inter:wght@400;700&display=swap"
-            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Display+Playfair:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="assets/lib/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="assets/lib/animate/animate.css">
@@ -113,11 +111,16 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/imgs/Background/Events 2.jpg" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>We Host Annual Events</h5>
-                        <p>Join us to learn more about our scholarships and opportunities.</p>
+                    <!----Video -->
+                    <div class="ratio ratio-16x9">
+                        <iframe id="videoFrame" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="Intro Video"
+                            allowfullscreen></iframe>
                     </div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>International Experiences</h5>
+                        <p>Our international experiences are designed to help you achieve your educational goals.</p>
+                    </div>
+
                 </div>
             </div>
 
@@ -284,6 +287,90 @@
                         <figure class="img-wrap-2">
                             <img src="assets/imgs/Application guidance.jpg" alt="Image" class="img-fluid">
                         </figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--- STUDY DESTINATION --->
+        <div class="study-destination-section">
+            <div class="container">
+                <div class="section-header text-center mb-5">
+                    <h6 class="text-primary fw-bold">Study Destination</h6>
+                    <h1 class="display-5">
+                        <span class="text-primary">
+                            Explore Our Destination</span>
+                    </h1>
+                    <p class="lead">
+                        Mtendere Education Consult is committed to providing students with the best possible study
+                        environment and support. We have a network of highly-rated universities and colleges across the
+                        world.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 mb-5">
+                        <div class="card h-100">
+                            <img src="assets/imgs/study destination 1.jpg" alt="Image" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <span class="text-primary">
+                                        United Kingdom</span>
+                                </h5>
+                                <p class="card-text">
+                                    We have a network of top international universities and colleges in the UK. Visit
+                                    our directory to find the perfect university for your needs.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 mb-5">
+                        <div class="card h-100">
+                            <img src="assets/imgs/study destination 2.jpg" alt="Image" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <span class="text-primary">
+                                        France</span>
+                                </h5>
+                                <p class="card-text">
+                                    We have a network of top international universities and colleges in France. Visit
+                                    our directory to find the perfect university for your needs.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                        <div class="card h-100">
+                            <img src="assets/imgs/study destination 3.jpg" alt="Image" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <span class="text-primary">
+                                        Germany</span>
+                                </h5>
+                                <p class="card-text">
+                                    We have a network of top international universities and colleges in Germany. Visit
+                                    our directory to find the perfect university for your needs.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-5">
+                        <div class="card h-100">
+                            <img src="assets/imgs/study destination 4.jpg" alt="Image" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <span class="text-primary">
+                                        Canada</span>
+                                </h5>
+                                <p class="card-text">
+                                    We have a network of top international universities and colleges in Canada. Visit
+                                    our directory to find the perfect university for your needs.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
