--- a/index.html
+++ b/index.html
@@ -652,8 +652,7 @@
             </div>
         </div>
 
-        <div class="why-choose sticky-section"
-            style="background-image: url('assets/imgs/Background/mtendere.jpg'); text-align: center; justify-content: center;">
+        <div class="why-choose sticky-section" style="background-image: url('assets/imgs/Background/mtendere.jpg'); text-align: center; justify-content: center;">
             <div class="container">
                 <div class="section-header text-center mb-5">
                     <h6 class="text-primary fw-bold">Why Choose Us?</h6>
