--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <link rel="stylesheet" href="assets/css/aos.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
+        <link rel="stylesheet" href="assets/lib/bootstrap/scss/bootstrap/scss/bootstrap.scss">
+
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
         <!-- jQuery -->
@@ -1322,8 +1324,11 @@
         </div>
 
         <div class="col-lg-12">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Latest News</h6>
+                <h1 class="display-5"><span class="text-primary">Latest International Education News</span></h1>
+            </div>
             <div class="owl-carousel blog-carousel owl-theme">
-
                 <!-- Blog Post 1 -->
                 <div class="item">
                     <div class="blog-post text-center px-3">
@@ -1354,7 +1359,6 @@
                 <!-- Add more if needed -->
             </div>
         </div>
-
 
         <!-- Call to Action -->
         <div class="container">
