--- a/contact.html
+++ b/contact.html
@@ -142,17 +142,14 @@
                 <p>Yes. We have official partnerships with reputable institutions like Chandigarh University, Parul
                     University, Jain University, and more.</p>
             </div>
-
         </div>
     </div>
 
     <div class="untree_co-section">
         <div class="container">
-
             <div class="row mb-5">
                 <div class="col-lg-4 mb-5 order-2 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
                     <div class="contact-info">
-
                         <div class="address mt-4">
                             <i class="icon-room"></i>
                             <h4 class="mb-2">Location:</h4>
@@ -227,7 +224,7 @@
                     <div class="map-responsive">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.1234567890123!2d34.123456789012345!3d-13.123456789012345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x123456789abcdefg!2sMtendere%20Education%20Consult%20-%20Study%20Abroad%20Malawi!5e0!3m2!1sen!2smw!4v1234567890123"
-                            width="auto" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                     <div id="untree_map">
                         <div id="untree_map_canvas">
